<resources>
    <string name="app_name">QRScanner</string>
    <string name="settings">Settings</string>
    <string name="scan_qr">Scan QR</string>
    <string name="create_qr">Create QR</string>
    <string name="qr_code">Qr Code</string>
    <string name="create">Create</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_text">url:</string>
    <string name="please_enter_here">Please enter here</string>
    <string name="choose_a_picture">Choose a picture</string>
    <string name="text_confirm">Confirm</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_dest1">Please enter the content first</string>
    <string name="copy_success">Copy Success</string>
    <string name="save_success">Save Success</string>

    <string name="text_dest2">Unrecognized content</string>

</resources>