<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:orientation="vertical"
android:gravity="center_horizontal"
    android:background="@drawable/dialog_camera_bg"
    android:layout_height="wrap_content">



    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:text="@string/create"
android:minWidth="300dp"
        android:layout_marginTop="24dp"
        android:maxHeight="300dp"
        android:gravity="center_horizontal"
android:textSize="12sp"
        android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatTextView>

    <FrameLayout
        android:id="@+id/confirmBtn"
        android:layout_width="128dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_home_creatqr"
        android:layout_height="44dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/text_confirm"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatTextView>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/closeBtn"
        android:layout_width="128dp"
        android:layout_marginTop="6dp"
        android:layout_height="44dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/text_cancel"
            android:layout_gravity="center"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/color10"
            android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatTextView>

    </FrameLayout>

</LinearLayout>