<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/color4"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_tag_100"
            android:layout_gravity="end"
            android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatImageView>


        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:src="@mipmap/ic_back"
            android:id="@+id/backBtn"
            android:layout_marginTop="34dp"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatImageButton>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/url_text"
     android:layout_marginTop="111dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/color2"
            android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatTextView>

    </FrameLayout>


    <LinearLayout
        android:background="@drawable/bg_home_main"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        
        
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="start"
            android:maxLength="380"
            android:id="@+id/contentEt"
            android:padding="14dp"
            android:hint="@string/please_enter_here"
            android:layout_marginStart="20dp"
            android:textSize="14sp"
            android:background="@drawable/bg_make_creatqr"
            android:layout_height="147dp"></androidx.appcompat.widget.AppCompatEditText>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:id="@+id/makeBtn"
            android:layout_marginEnd="20dp"
            android:background="@drawable/bg_home_creatqr"
            android:layout_height="62dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:text="@string/create"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/color2"
                android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatTextView>

        </FrameLayout>
    </LinearLayout>


    </LinearLayout>